# DDOS-Detection-Model

./: baseline_test.ipynb  binary_classification.ipynb  binary_classification_tests.ipynb  data_analysis.ipynb  data_pipeline.py  lstm.ipynb  main.ipynb  multiclass.ipynb  multiclassv2.ipynb  pyproject.toml
saved_models/: best_autoencoder_full.pth  best_autoencoder_full2.pth  best_classifier.pth  best_classifier2.pth  best_encoder_only.pth  best_encoder_only2.pth  best_multiclassifier.pth  best_multiclassifier2.pth  best_multiclassifier_v2.pth
saved_models_lstm/: best_autoencoder_full.pth  best_classifier.pth  best_encoder_only.pth
src/: binary_classification.ipynb  binary_classification_tests.ipynb  data_analysis.ipynb  data_pipeline.py  lstm_with_unbalanced_classes.ipynb  multiclass.ipynb  multiclassv2.ipynb
